library/foundation/include/virgil/crypto/foundation/vscf_recipient_cipher.h

//  @generated
// --------------------------------------------------------------------------
// clang-format off
//  Generated section start.
// --------------------------------------------------------------------------

//
//  Handle 'recipient cipher' context.
//
typedef struct vscf_recipient_cipher_t vscf_recipient_cipher_t;
//
//  Copy given class context by increasing reference counter.
//
VSCF_PUBLIC vscf_recipient_cipher_t *
vscf_recipient_cipher_shallow_copy(vscf_recipient_cipher_t *self);
//
//  Accomplish encryption.
//
VSCF_PUBLIC vscf_status_t
vscf_recipient_cipher_finish_encryption(vscf_recipient_cipher_t *self, vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Initiate decryption process with a recipient private key.
//  Message Info can be empty if it was embedded to encrypted data.
//
VSCF_PUBLIC vscf_status_t
vscf_recipient_cipher_start_decryption_with_key(vscf_recipient_cipher_t *self, vsc_data_t recipient_id,
        vscf_impl_t *private_key, vsc_data_t message_info) VSCF_NODISCARD;
//
//  Initiate decryption process with a recipient private key.
//  Message Info can be empty if it was embedded to encrypted data.
//  Message Info footer can be empty if it was embedded to encrypted data.
//  If footer was embedded, method "start decryption with key" can be used.
//
VSCF_PUBLIC vscf_status_t
vscf_recipient_cipher_start_verified_decryption_with_key(vscf_recipient_cipher_t *self, vsc_data_t recipient_id,
        vscf_impl_t *private_key, vsc_data_t message_info, vsc_data_t message_info_footer) VSCF_NODISCARD;
//
//  Return buffer length required to hold output of the method
//  "process decryption" and method "finish" during decryption.
//
VSCF_PUBLIC size_t
vscf_recipient_cipher_decryption_out_len(vscf_recipient_cipher_t *self, size_t data_len);
//
//  Process with a new portion of data.
//  Return error if data can not be encrypted or decrypted.
//
VSCF_PUBLIC vscf_status_t
vscf_recipient_cipher_process_decryption(vscf_recipient_cipher_t *self, vsc_data_t data,
        vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Accomplish decryption.
//
VSCF_PUBLIC vscf_status_t
vscf_recipient_cipher_finish_decryption(vscf_recipient_cipher_t *self, vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Return true if data was signed by a sender.
//
//  Precondition: this method should be called after "finish decryption".
//
VSCF_PUBLIC bool
vscf_recipient_cipher_is_data_signed(const vscf_recipient_cipher_t *self);
//
//  Return information about signers that sign data.
//
//  Precondition: this method should be called after "finish decryption".
//  Precondition: method "is data signed" returns true.
//
VSCF_PUBLIC const vscf_signer_info_list_t *
vscf_recipient_cipher_signer_infos(const vscf_recipient_cipher_t *self);
//
//  Verify given cipher info.
//
VSCF_PUBLIC bool
vscf_recipient_cipher_verify_signer_info(vscf_recipient_cipher_t *self, const vscf_signer_info_t *signer_info,
        const vscf_impl_t *public_key);
//
//  Return buffer length required to hold message footer returned by the
//  "pack message footer" method.
//
//  Precondition: this method should be called after "finish encryption".
//
VSCF_PUBLIC size_t
vscf_recipient_cipher_message_info_footer_len(const vscf_recipient_cipher_t *self);
//
//  Return serialized message info footer to the buffer.
//
//  Precondition: this method should be called after "finish encryption".
//
//  Note, store message info to use it for verified decryption process,
//  or place it at the encrypted data ending (embedding).
//
//  Return message info footer - signers public information, etc.
//
VSCF_PUBLIC vscf_status_t
vscf_recipient_cipher_pack_message_info_footer(vscf_recipient_cipher_t *self, vsc_buffer_t *out) VSCF_NODISCARD;