wrappers/python/virgil_crypto_lib/foundation/_c_bridge/_vscf_recipient_cipher.py


    def vscf_recipient_cipher_finish_encryption(self, ctx, out):
        """Accomplish encryption."""
        vscf_recipient_cipher_finish_encryption = self._lib.vscf_recipient_cipher_finish_encryption
        vscf_recipient_cipher_finish_encryption.argtypes = [POINTER(vscf_recipient_cipher_t), POINTER(vsc_buffer_t)]
        vscf_recipient_cipher_finish_encryption.restype = c_int
        return vscf_recipient_cipher_finish_encryption(ctx, out)

    def vscf_recipient_cipher_start_decryption_with_key(self, ctx, recipient_id, private_key, message_info):
        """Initiate decryption process with a recipient private key.
        Message Info can be empty if it was embedded to encrypted data."""
        vscf_recipient_cipher_start_decryption_with_key = self._lib.vscf_recipient_cipher_start_decryption_with_key
        vscf_recipient_cipher_start_decryption_with_key.argtypes = [POINTER(vscf_recipient_cipher_t), vsc_data_t, POINTER(vscf_impl_t), vsc_data_t]
        vscf_recipient_cipher_start_decryption_with_key.restype = c_int
        return vscf_recipient_cipher_start_decryption_with_key(ctx, recipient_id, private_key, message_info)

    def vscf_recipient_cipher_start_verified_decryption_with_key(self, ctx, recipient_id, private_key, message_info, message_info_footer):
        """Initiate decryption process with a recipient private key.
        Message Info can be empty if it was embedded to encrypted data.
        Message Info footer can be empty if it was embedded to encrypted data.
        If footer was embedded, method "start decryption with key" can be used."""
        vscf_recipient_cipher_start_verified_decryption_with_key = self._lib.vscf_recipient_cipher_start_verified_decryption_with_key
        vscf_recipient_cipher_start_verified_decryption_with_key.argtypes = [POINTER(vscf_recipient_cipher_t), vsc_data_t, POINTER(vscf_impl_t), vsc_data_t, vsc_data_t]
        vscf_recipient_cipher_start_verified_decryption_with_key.restype = c_int
        return vscf_recipient_cipher_start_verified_decryption_with_key(ctx, recipient_id, private_key, message_info, message_info_footer)

    def vscf_recipient_cipher_decryption_out_len(self, ctx, data_len):
        """Return buffer length required to hold output of the method
        "process decryption" and method "finish" during decryption."""
        vscf_recipient_cipher_decryption_out_len = self._lib.vscf_recipient_cipher_decryption_out_len
        vscf_recipient_cipher_decryption_out_len.argtypes = [POINTER(vscf_recipient_cipher_t), c_size_t]
        vscf_recipient_cipher_decryption_out_len.restype = c_size_t
        return vscf_recipient_cipher_decryption_out_len(ctx, data_len)

    def vscf_recipient_cipher_process_decryption(self, ctx, data, out):
        """Process with a new portion of data.
        Return error if data can not be encrypted or decrypted."""
        vscf_recipient_cipher_process_decryption = self._lib.vscf_recipient_cipher_process_decryption
        vscf_recipient_cipher_process_decryption.argtypes = [POINTER(vscf_recipient_cipher_t), vsc_data_t, POINTER(vsc_buffer_t)]
        vscf_recipient_cipher_process_decryption.restype = c_int
        return vscf_recipient_cipher_process_decryption(ctx, data, out)

    def vscf_recipient_cipher_finish_decryption(self, ctx, out):
        """Accomplish decryption."""
        vscf_recipient_cipher_finish_decryption = self._lib.vscf_recipient_cipher_finish_decryption
        vscf_recipient_cipher_finish_decryption.argtypes = [POINTER(vscf_recipient_cipher_t), POINTER(vsc_buffer_t)]
        vscf_recipient_cipher_finish_decryption.restype = c_int
        return vscf_recipient_cipher_finish_decryption(ctx, out)

    def vscf_recipient_cipher_is_data_signed(self, ctx):
        """Return true if data was signed by a sender.

        Precondition: this method should be called after "finish decryption"."""
        vscf_recipient_cipher_is_data_signed = self._lib.vscf_recipient_cipher_is_data_signed
        vscf_recipient_cipher_is_data_signed.argtypes = [POINTER(vscf_recipient_cipher_t)]
        vscf_recipient_cipher_is_data_signed.restype = c_bool
        return vscf_recipient_cipher_is_data_signed(ctx)

    def vscf_recipient_cipher_signer_infos(self, ctx):
        """Return information about signers that sign data.

        Precondition: this method should be called after "finish decryption".
        Precondition: method "is data signed" returns true."""
        vscf_recipient_cipher_signer_infos = self._lib.vscf_recipient_cipher_signer_infos
        vscf_recipient_cipher_signer_infos.argtypes = [POINTER(vscf_recipient_cipher_t)]
        vscf_recipient_cipher_signer_infos.restype = POINTER(vscf_signer_info_list_t)
        return vscf_recipient_cipher_signer_infos(ctx)

    def vscf_recipient_cipher_verify_signer_info(self, ctx, signer_info, public_key):
        """Verify given cipher info."""
        vscf_recipient_cipher_verify_signer_info = self._lib.vscf_recipient_cipher_verify_signer_info
        vscf_recipient_cipher_verify_signer_info.argtypes = [POINTER(vscf_recipient_cipher_t), POINTER(vscf_signer_info_t), POINTER(vscf_impl_t)]
        vscf_recipient_cipher_verify_signer_info.restype = c_bool
        return vscf_recipient_cipher_verify_signer_info(ctx, signer_info, public_key)

    def vscf_recipient_cipher_message_info_footer_len(self, ctx):
        """Return buffer length required to hold message footer returned by the
        "pack message footer" method.

        Precondition: this method should be called after "finish encryption"."""
        vscf_recipient_cipher_message_info_footer_len = self._lib.vscf_recipient_cipher_message_info_footer_len
        vscf_recipient_cipher_message_info_footer_len.argtypes = [POINTER(vscf_recipient_cipher_t)]
        vscf_recipient_cipher_message_info_footer_len.restype = c_size_t
        return vscf_recipient_cipher_message_info_footer_len(ctx)

    def vscf_recipient_cipher_pack_message_info_footer(self, ctx, out):
        """Return serialized message info footer to the buffer.

        Precondition: this method should be called after "finish encryption".

        Note, store message info to use it for verified decryption process,
        or place it at the encrypted data ending (embedding).

        Return message info footer - signers public information, etc."""
        vscf_recipient_cipher_pack_message_info_footer = self._lib.vscf_recipient_cipher_pack_message_info_footer
        vscf_recipient_cipher_pack_message_info_footer.argtypes = [POINTER(vscf_recipient_cipher_t), POINTER(vsc_buffer_t)]
        vscf_recipient_cipher_pack_message_info_footer.restype = c_int
        return vscf_recipient_cipher_pack_message_info_footer(ctx, out)

    def vscf_recipient_cipher_shallow_copy(self, ctx):
        vscf_recipient_cipher_shallow_copy = self._lib.vscf_recipient_cipher_shallow_copy
        vscf_recipient_cipher_shallow_copy.argtypes = [POINTER(vscf_recipient_cipher_t)]
        vscf_recipient_cipher_shallow_copy.restype = POINTER(vscf_recipient_cipher_t)
        return vscf_recipient_cipher_shallow_copy(ctx)
